--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,3 +22,19 @@ a{
   border-bottom: 1px solid rgb(9, 52, 243) !important;
   box-shadow: 0 1px 0 0 rgb(9, 52, 243) !important;
 }
+.gallery{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content:space-around;
+}
+
+.item{
+  width:30%;
+}
+
+
+.home-card{
+  max-width: 500px;
+  height:max-content;
+  margin:26px auto;
+}
