--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,10 @@ a{
   border-bottom: 1px solid rgb(9, 52, 243) !important;
   box-shadow: 0 1px 0 0 rgb(9, 52, 243) !important;
 }
+.input-field input[type=password]:focus {
+  border-bottom: 1px solid rgb(9, 52, 243) !important;
+  box-shadow: 0 1px 0 0 rgb(9, 52, 243) !important;
+}
 .gallery{
   display:flex;
   flex-wrap: wrap;
